FIX - changed letter-spacing in overline from px to rem as compler struggles with 0.5px

--- a/src/typography.css
+++ b/src/typography.css
@@ -82,7 +82,7 @@ small,
   font-size: 10px;
   line-height: 18px;
   text-transform: uppercase;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.032rem;
 }
 
 a,
